<resources>
    <string name="app_name">CafeMobileAplication</string>

    <string name="ek_img_content">ExportKit Image</string>
    <string name="menu_ek3_string">Menu</string>
    <string name="tea_string">tea</string>
    <string name="coffee_string">coffee</string>
    <string name="cake_string">cake</string>
    <string name="grey_tea_string">Grey Tea</string>
    <string name="a_chinese_black_tea_string">A Chinese black tea </string>
    <string name="__2_45_string">2.45</string>
    <string name="add_string">Add</string>
    <string name="__2_45_ek1_string">3.45</string>
    <string name="add_ek1_string">Add</string>
    <string name="a_refreshing_apple_iced_tea_string">A refreshing Apple iced tea</string>
    <string name="apple_iced_tea_string">Apple iced tea</string>
    <string name="grey_tea_ek1_string">English tea</string>
    <string name="__2_45_ek2_string">2.70</string>
    <string name="add_ek2_string">Add</string>
    <string name="a_bold_and_full_bodied_tea_string">A bold and full bodied tea</string>
    <string name="grey_tea_ek2_string">Green tea</string>
    <string name="a_chinese_black_tea_ek1_string">Dried green tea</string>
    <string name="__2_45_ek3_string">2.45</string>
    <string name="add_ek3_string">Add</string>
    <string name="Cortado_1">Cortado</string>
    <string name="milk_and_espresso">Milk and espresso</string>
    <string name="Cortado_price">2.45</string>
    <string name="Cortado_add">Add</string>
    <string name="Latte1">Latte</string>
    <string name="latte_desc">Foamed classic iced coffee</string>
    <string name="Latte_price">2.70</string>
    <string name="Latte_add">Add</string>
    <string name="iced_coffee">Iced Coffee</string>
    <string name="iced_coffee_desc">espresso and milk and ice</string>
    <string name="iced_coffee_price">3.20</string>
    <string name="iced_coffee_add">Add</string>
    <string name="iced_americano">Iced Americano</string>
    <string name="iced_americano_desc">Two shots espresso and ice</string>
    <string name="iced_americano_price">2.45</string>
    <string name="iced_americano_add">Add</string>

    <string name="vanilla_cloud">Vanilla Cloud</string>
    <string name="vanilla_cloud_desc">Vanilla Cake</string>
    <string name="vanilla_cloud_price">6.45</string>
    <string name="vanilla_cloud_add">Add</string>

    <string name="strawberry_cake">Strawberry Cake</string>
    <string name="strawberry_cake_desc">Strawberry Cheesecake</string>
    <string name="strawberry_cake_price">7.45</string>
    <string name="strawberry_cake_add">Add</string>

    <string name="sweet_cake">Sweet Cake</string>
    <string name="sweet_cake_desc">Chocolate cake</string>
    <string name="sweet_cake_price">7.80</string>
    <string name="sweet_cake_add">Add</string>

    <string name="sticky_toffee_pudding">Sticky Toffee Pudding</string>
    <string name="sticky_toffee_pudding_desc">Toffee Cake</string>
    <string name="sticky_toffee_pudding_price">7.50</string>
    <string name="sticky_toffee_pudding_add">Add</string>

    <string name="chocolate_cheesecake">Chocolate Cheesecake</string>
    <string name="chocolate_cheesecake_desc">Toffee Cake</string>
    <string name="chocolate_cheesecake_price">8.50</string>
    <string name="chocolate_cheesecake_add">Add</string>

    ////////
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="availability">availability</string>
    <string name="product_details">product_details</string>


</resources>